--- a/ui/createpool.ui
+++ b/ui/createpool.ui
@@ -319,7 +319,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">1</property>
-                            <property name="label" translatable="yes">sourcep:</property>
+                            <property name="label">sourcep:</property>
                             <property name="use_underline">True</property>
                             <property name="mnemonic_widget">pool-source-path</property>
                           </object>
